@@ -3,7 +3,7 @@
   "balanced": "balanced",
   "introduction": "Introduction",
   "separateWater": "Separate Water",
-  "balancingGame": "Balancing Game",
+  "game": "Game",
   "hideWhy": "Hide Why",
   "showAnswer": "Show Answer",
   "tryAgain": "Try Again",
